--- a/test/homepage.ui
+++ b/test/homepage.ui
@@ -27,7 +27,7 @@
      <item row="2" column="0" rowspan="2">
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QPushButton" name="pushButton">
+        <widget class="QPushButton" name="homepageButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -62,7 +62,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="menuButton">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
            <horstretch>0</horstretch>
@@ -104,10 +104,13 @@
          <property name="alignment">
           <set>Qt::AlignCenter</set>
          </property>
+         <property name="buddy">
+          <cstring>chooseComboBox</cstring>
+         </property>
         </widget>
        </item>
        <item alignment="Qt::AlignLeft|Qt::AlignVCenter">
-        <widget class="QComboBox" name="comboBox">
+        <widget class="QComboBox" name="chooseComboBox">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
            <horstretch>0</horstretch>
@@ -168,7 +171,7 @@
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="mapLabel">
         <property name="geometry">
          <rect>
           <x>140</x>
